Permit register circles on frames endpoint
